Fixed font and alignment for post lists and dashboard link alignment in the footer

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -94,7 +94,7 @@
         }
 
         ol, ul {
-            margin: 15px 0;
+            font-size: 16px;
             padding-left: 40px;
         }
 
